--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 <head> 
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />	
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
@@ -50,7 +50,7 @@
 
 	</div> 
 </div> <!-- end of #main_container -->   
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 <script type="text/javascript" src="/js/fancybox/jquery.fancybox-1.3.1.pack.js"></script>
 <link rel="stylesheet" href="/js/fancybox/jquery.fancybox-1.3.1.css" type="text/css" media="screen" />
 <script type="text/javascript" src="/js/custom.js"></script>
